# async-file

./: .gitignore  .pre-commit-config.yaml  bench_async_file.py  pyproject.toml  readme.md
.github/workflows/: ci.yml
async_file/: async_file.py
tests/: test_async_file.py
