[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools", "wheel" ]

[project]
name = "async-file"
version = "0.1.0"
description = "A Python module for asynchronous file handling"
authors = [ { name = "Dobatymo" } ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [  ]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

bench = [ "aiofiles", "rich" ]

[tool.ruff]
line-length = 120
lint.extend-select = [
  "ASYNC",
  "B",
  "I",
  "ICN",
  "LOG",
  "NPY",
  "PIE",
  "PLE",
  "SIM",
  "W",
]
lint.ignore = [
  "B011",
]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
